<resources>
    <drawable name="img_array">
        <item>@drawable/camera</item>
        <!--<item>@drawable/photos</item>-->
        <!--<item>@drawable/photos</item>-->
        <!--<item>@drawable/video_recording</item>-->
        <!--<item>@drawable/video</item>-->
        <!--<item>@drawable/video</item>-->
        <!--<item>@drawable/audio_recording</item>-->
        <!--<item>@drawable/audio</item>-->
        <!--<item>@drawable/audio</item>-->
    </drawable>
    <string name="app_name">Stocker</string>
    <string name="sign_in">Sign In</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="enter_your_mob_no">Enter your mobile number</string>
    <string name="or">Or</string>
    <string name="google">Continue With Google</string>
    <string name="continue_with_mobile">Continue With mobile</string>
    <string name="fb">Continue With Facebook</string>
    <string name="stocker">Stocker</string>
    <string name="store_data">Store data automatically in a single screen</string>
    <string name="relive_your">Relive your life</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="we_have_sent">We have sent otp to your mobile number</string>
    <string name="waitng_for_otp">Waiting for otp</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="verify">Verify</string>
    <string name="online">Online</string>
    <string name="current_year">Current year record</string>
    <string name="previous_year">Previous Year record</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="type_here">Type here</string>
    <string name="Cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="new_">New</string>
    <string name="audio_rcording">Audio Recording</string>
    <string name="current_years_photos">Current Years Photos</string>
    <string name="current_years_videos">Current Years Videos</string>
    <string name="current_years_audio">Current Years Audios</string>
    <string name="prev_years_photos">Previous Years Photos</string>
    <string name="prev_years_videos">Previous Years Videos</string>
    <string name="prev_years_audio">Previous Years Audios</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search here</string>
    <string name="block_user">Block user</string>
    <string name="clear_chat">Clear chat</string>
    <string name="update">Update</string>
    <string name="audio">Audio</string>
    <string name="create_grp">Create Group</string>
    <string name="new_group">New Group</string>
    <string name="type_group_name">Type group name</string>
    <string name="change_group">Change Group Name</string>
    <string name="add_participent">Add Participent</string>
    <string-array name="home_items">
        <item>Camera</item>
        <item>Photos</item>
        <item>Photos</item>
        <item>Video Recording</item>
        <item>Videos</item>
        <item>Videos</item>
        <item>Audio Recording</item>
        <item>Audio</item>
        <item>Audio</item>
    </string-array>
    <string name="slide_to_cancel">Slide to cancel</string>
    <string name="default_notification_channel_id">Notification Default channel</string>
    <string name="app_information">
       "\u2022" Auto save your phone data like pics, audio and video in the app without occupying the phone storage.\n\n
"\u2022"Personal and group chat option is available\n\n
"\u2022"You can share,delete and save data anytime anywhere using this app.\n\n
"\u2022"Personal and group chat option is available.\n\n
"\u2022"Mobile data in Stocker App remains safe and secure in the case of mobile lost,snatching,Natural clamity,theft or damage\n
"\u2022"The data is stored in the cloud that you can delete any time.\n\n
"\u2022"You can save  social media sites data like WhatsApp, Facebook, Tiktok etc.\n\n
"\u2022"Use the app camera for clicking pics, video and audio.The data will be saved automatically in the app storage.\n\n"\u2022"You will feel proud to know that <font fgcolor='#FF8E8E93'>STOCKER</font>  app is made in INDIA.\n\nBy using this app you can keep your important data save forever with no cost.\n \n"\u2022" <font fgcolor='#FF4CD964'>EVERYTHING ON A SINGLE SCREEN WITH EASY FUNCTIONALITIES.</font>

    </string>
    <string name="faqs">
        1.Autosave the phone data like pics, audio and video in the app without occupying the phone storage.\n
Personal and group chat option is available\n
You can share images, videos and audios to the users using the Stocker App and other apps too.\n
Mobile data in Stocker App remain safe and secure in the case of calamities like mobile lost or damage.\n
All the app data is shown on a single screen.\n
Has easy functionalities\n
The data is stored in the cloud that you can delete any time.\n
You can save the data of social media sites like WhatsApp, Facebook, Tiktok etc.\n
Use the app camera too that gets saved automatically in the app.
    </string>
    <string name="tc">
        <p><strong>Registration:</strong></p> you must register for our Services,provide your current mobile number.\n\n
you agree to receive  text message and other information to related to this Application\n\n
Our Services do not provide access to emergency services including the police ,fire departments,or hospitals\n\n

All the app data is shown on a single screen.\n\n
Has easy functionalities\n
Our Cookie Policy, which sets out information about the cookies on the Site..\n\n
You can save the data of social media sites like WhatsApp, Facebook, Tiktok etc.\n

    </string>

    <string name="privacy">
       Our Privacy policy are easier to understand and reflect new features such as personal group chat.\n\nPersonal and group chat are yours we cannot read them.\n\nWe know that you care how information about you is used and shared and we appreciate your trust.\n\nStocker App receives or collects information when we operate and provide our services including when you install,access our services.\n\nWe aim to protect your personal information through a system of organizational and technical security measures.\nAt Curerick, we never share your information with any third party. All the details you share to us are kept confidential.
    </string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="support">Support</string>
    <string name="attach_file_from_gallery">Attach File from Gallery</string>
    <string name="save_to_stocker">(Save To Stocker)</string>
    <string name="noti_channel_default">Default Channel</string>
    <string name="btn_retry_not">Retry</string>
    <string name="btn_cancel_not">Cancel</string>
    <string name="file_upload_successful">File has been uploaded successfully</string>
    <string name="uploading">Uploading</string>
    <string name="in_progress">in progress</string>
    <string name="message_failed">File has been not uploaded</string>
    <string name="message_upload_success">Uploading Success</string>
    <string name="error_upload_failed">Uploading failed</string>
    <string name="message_upload_failed">File is not uploaded. Please TRY AGAIN</string>
    <string name="internal_storage">Internal Storage</string>
</resources>
